testsuite/bsc.names/portRenaming/invalidAttrs/enable/Empty.bsv

interface Ifc;
  (* enable = "" *)
  method Action start(Bool a, Bool b);
endinterface

